# architect

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  SECURITY.md  pyproject.toml
apps/api-gateway/: pyproject.toml
apps/api-gateway/src/api_gateway/: __init__.py  config.py  models.py  service_client.py
apps/api-gateway/tests/: test_gateway.py
apps/cli/: pyproject.toml
apps/cli/src/architect_cli/: __init__.py  config.py  main.py  output.py
apps/cli/tests/test_commands/: test_cancel.py  test_config.py  test_health.py  test_proposals.py  test_state.py  test_watch.py
libs/architect-common/: pyproject.toml
libs/architect-common/src/architect_common/: __init__.py  config.py  dependencies.py  enums.py  errors.py  health.py  interfaces.py  logging.py  types.py
libs/architect-common/tests/: test_config.py  test_enums.py  test_errors.py  test_types.py
libs/architect-db/: alembic.ini  pyproject.toml
libs/architect-db/migrations/: env.py
libs/architect-db/migrations/versions/: 001_initial_schema.py  002_add_fk_constraints.py  003_add_indexes_and_fk.py  004_add_ledger_delta_columns.py  005_add_phase3_tables.py  006_add_vote_constraints.py  007_add_pgvector_column.py  008_add_observation_indexes.py  009_enum_columns.py  010_add_phase4_tables.py
libs/architect-db/src/architect_db/: __init__.py  engine.py  session.py
libs/architect-db/tests/: test_budget_repo.py  test_escalation_repo.py  test_migrations.py  test_models.py  test_repositories.py
libs/architect-events/: pyproject.toml
libs/architect-events/src/architect_events/: __init__.py  dlq.py  publisher.py  schemas.py  serialization.py  subscriber.py
libs/architect-events/tests/: test_dlq.py  test_publisher.py  test_schemas.py  test_subscriber.py
libs/architect-llm/: pyproject.toml
libs/architect-llm/src/architect_llm/: __init__.py  client.py  cost_tracker.py  models.py  prompts.py  rate_limiter.py
libs/architect-llm/tests/: test_client.py  test_cost_tracker.py  test_models.py  test_rate_limiter.py
libs/architect-observability/: pyproject.toml
libs/architect-observability/tests/: test_setup.py
libs/architect-sandbox-client/: pyproject.toml
libs/architect-sandbox-client/tests/: test_models.py
libs/architect-testing/: pyproject.toml
services/agent-comm-bus/: pyproject.toml
services/agent-comm-bus/src/agent_comm_bus/: bus.py  (+5 more)
services/agent-comm-bus/tests/: conftest.py  test_bus.py  test_dead_letter.py  test_models.py  test_routes.py
services/codebase-comprehension/: pyproject.toml
services/codebase-comprehension/tests/: conftest.py  test_architecture_map.py  test_ast_indexer.py  test_call_graph.py  test_chunker.py  test_context_assembler.py  test_convention_extractor.py  test_embeddings.py  test_routes.py  test_tree_sitter_indexer.py  test_vector_store.py
services/coding-agent/: pyproject.toml
services/coding-agent/tests/: conftest.py  test_agent.py  test_code_scan.py  test_commit_activities.py  test_context_builder.py  test_git.py  test_parse_files.py  test_planner.py  test_routes.py  test_temporal_activities.py
services/deployment-pipeline/: pyproject.toml
services/deployment-pipeline/tests/: __init__.py  conftest.py  test_activities.py  test_event_handlers.py  test_models.py  test_pipeline_manager.py  test_routes.py
services/economic-governor/: pyproject.toml
services/economic-governor/tests/: conftest.py  test_budget_tracker.py  test_efficiency_scorer.py  test_enforcer.py  test_models.py  test_monitor.py  test_routes.py  test_spin_detector.py  test_temporal_activities.py  test_temporal_workflows.py
services/evaluation-engine/: pyproject.toml
services/evaluation-engine/tests/: conftest.py  test_evaluator.py  test_routes.py  test_temporal_activities.py
services/execution-sandbox/: pyproject.toml
services/execution-sandbox/tests/: conftest.py  test_docker_executor.py  test_docker_executor_init.py  test_firecracker_executor.py  test_resource_limits.py  test_routes.py  test_security.py  test_session_persistence.py
services/failure-taxonomy/: pyproject.toml
services/failure-taxonomy/tests/: __init__.py  conftest.py  test_activities.py  test_classifier.py  test_event_handlers.py  test_models.py  test_post_mortem.py  test_routes.py
services/human-interface/: pyproject.toml
services/human-interface/tests/: conftest.py  test_escalation.py  test_identity_auth.py  test_models.py  test_routes.py  test_ws_auth.py  test_ws_manager.py
services/knowledge-memory/: pyproject.toml
services/knowledge-memory/tests/: conftest.py  test_compression.py  test_doc_fetcher.py  test_event_handler.py  test_example_miner.py  test_failure_analyzer.py  test_heuristic_engine.py  test_knowledge_store.py  test_knowledge_store_sql_safety.py  test_knowledge_transfer.py  test_llm_utils.py  test_models.py  test_pattern_extractor.py  test_routes.py  test_similarity.py  test_strategy_validator.py  test_working_memory.py
services/multi-model-router/: pyproject.toml
services/multi-model-router/tests/: conftest.py  test_cost_collector.py  test_escalation.py  test_router.py  test_routes.py  test_scorer.py
services/security-immune/: pyproject.toml
services/security-immune/tests/: conftest.py  test_code_scanner.py  test_dependency_auditor.py  test_models.py  test_policy_enforcer.py  test_prompt_validator.py  test_routes.py  test_runtime_monitor.py
services/spec-engine/: pyproject.toml
services/spec-engine/tests/: conftest.py  test_injection.py  test_models.py  test_parser.py  test_routes.py  test_scope_governor.py  test_stakeholder_simulator.py  test_validator.py
services/task-graph-engine/: pyproject.toml
services/task-graph-engine/tests/: conftest.py  test_dag_persistence.py  test_decomposer.py  test_distributed_lock.py  test_graph.py  test_routes.py  test_scheduler.py  test_temporal_activities.py
services/world-state-ledger/: pyproject.toml
services/world-state-ledger/tests/: conftest.py  test_cache.py  test_routes.py  test_state_manager.py  test_temporal_activities.py
(+396 files in other folders)
