[project]
name = "architect-workspace"
version = "0.1.0"
description = "ARCHITECT: Autonomous Recursive Coding Hierarchy for Integrated Task Engineering and Execution"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
    "apps/cli",
    "apps/api-gateway",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "bandit[toml]>=1.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["libs/*/src", "services/*/src", "apps/*/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501", "RUF059", "B008"]

[tool.ruff.lint.isort]
known-first-party = [
    "architect_common",
    "architect_db",
    "architect_events",
    "architect_llm",
    "architect_sandbox_client",
    "architect_testing",
    "world_state_ledger",
    "task_graph_engine",
    "execution_sandbox",
    "evaluation_engine",
    "coding_agent",
    "architect_cli",
    "api_gateway",
    "spec_engine",
    "multi_model_router",
    "codebase_comprehension",
    "agent_comm_bus",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["libs", "services", "apps", "tests"]
addopts = "--import-mode=importlib -ra --strict-markers --override-ini='consider_namespace_packages=true'"
markers = [
    "integration: marks tests requiring infrastructure (docker, db)",
    "e2e: marks end-to-end tests",
    "slow: marks tests that take >10s",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["^.*/tests/"]

[[tool.mypy.overrides]]
module = [
    "temporalio.*",
    "docker.*",
    "nats.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "*/tests/*"]
skips = ["B101"]  # allow assert statements in tests
