[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway — unified HTTP entry point for the ARCHITECT system"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.uv.sources]
architect-common = { workspace = true }
