[project]
name = "architect-cli"
version = "0.1.0"
description = "CLI for the ARCHITECT system"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
architect = "architect_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_cli"]

[tool.uv.sources]
architect-common = { workspace = true }
