[project]
name = "architect-db"
version = "0.1.0"
description = "Database client, ORM models, and migrations for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_db"]

[tool.uv.sources]
architect-common = { workspace = true }
