[project]
name = "architect-llm"
version = "0.1.0"
description = "LLM client abstraction for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_llm"]

[tool.uv.sources]
architect-common = { workspace = true }
