[project]
name = "architect-sandbox-client"
version = "0.1.0"
description = "Client SDK for the ARCHITECT execution sandbox"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect_sandbox_client"]

[tool.uv.sources]
architect-common = { workspace = true }
