[project]
name = "agent-comm-bus"
version = "0.1.0"
description = "Agent Communication Bus — inter-agent messaging and coordination for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_comm_bus"]

[tool.uv.sources]
architect-common = { workspace = true }
