[project]
name = "codebase-comprehension"
version = "0.1.0"
description = "Codebase Comprehension — code analysis and understanding for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_comprehension"]

[tool.uv.sources]
architect-common = { workspace = true }
