[project]
name = "codebase-comprehension"
version = "0.1.0"
description = "Codebase Comprehension — code analysis and understanding for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_comprehension"]

[tool.uv.sources]
architect-common = { workspace = true }
