[project]
name = "coding-agent"
version = "0.1.0"
description = "Core coding agent for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-llm",
    "architect-events",
    "architect-sandbox-client",
    "httpx>=0.27",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-llm = { workspace = true }
architect-events = { workspace = true }
architect-sandbox-client = { workspace = true }
