[project]
name = "deployment-pipeline"
version = "0.1.0"
description = "Deployment Pipeline — automated build, test, and deploy orchestration for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployment_pipeline"]

[tool.uv.sources]
architect-common = { workspace = true }
