[project]
name = "economic-governor"
version = "0.1.0"
description = "Economic Governor — cost management and resource allocation for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/economic_governor"]

[tool.uv.sources]
architect-common = { workspace = true }
