[project]
name = "economic-governor"
version = "0.1.0"
description = "Economic Governor — cost management and resource allocation for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "architect-observability",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/economic_governor"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
architect-observability = { workspace = true }
