[project]
name = "evaluation-engine"
version = "0.1.0"
description = "Evaluation Engine — multi-layer code evaluation for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-events",
    "architect-llm",
    "architect-sandbox-client",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation_engine"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-events = { workspace = true }
architect-llm = { workspace = true }
architect-sandbox-client = { workspace = true }
