[project]
name = "execution-sandbox"
version = "0.1.0"
description = "Execution Sandbox — isolated code execution for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-events",
    "architect-observability",
    "docker>=7.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/execution_sandbox"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-events = { workspace = true }
architect-observability = { workspace = true }
