[project]
name = "failure-taxonomy"
version = "0.1.0"
description = "Failure Taxonomy Engine — error classification and recovery strategies for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/failure_taxonomy"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
