[project]
name = "failure-taxonomy"
version = "0.1.0"
description = "Failure Taxonomy Engine — error classification and recovery strategies for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "architect-observability",
    "architect-llm",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/failure_taxonomy"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
architect-observability = { workspace = true }
architect-llm = { workspace = true }
