[project]
name = "human-interface"
version = "0.1.0"
description = "Human-AI Interface — approval workflows and human-in-the-loop for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/human_interface"]

[tool.uv.sources]
architect-common = { workspace = true }
