[project]
name = "knowledge-memory"
version = "0.1.0"
description = "Knowledge & Memory System — persistent learning and retrieval for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_memory"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
