[project]
name = "knowledge-memory"
version = "0.1.0"
description = "Knowledge & Memory System — persistent learning and retrieval for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "architect-llm",
    "architect-observability",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "nats-py>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_memory"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
architect-llm = { workspace = true }
architect-observability = { workspace = true }
