[project]
name = "security-immune"
version = "0.1.0"
description = "Security & Immune System — threat detection and sandboxing for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/security_immune"]

[tool.uv.sources]
architect-common = { workspace = true }
