[project]
name = "security-immune"
version = "0.1.0"
description = "Security & Immune System — threat detection and sandboxing for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "architect-observability",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "bandit>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/security_immune"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
architect-observability = { workspace = true }
