[project]
name = "task-graph-engine"
version = "0.1.0"
description = "Task Graph Engine — DAG decomposition and scheduling for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "architect-llm",
    "architect-observability",
    "temporalio>=1.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "networkx>=3.4",
    "redis[hiredis]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_graph_engine"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
architect-llm = { workspace = true }
architect-observability = { workspace = true }
