[project]
name = "world-state-ledger"
version = "0.1.0"
description = "World State Ledger — single source of truth for ARCHITECT"
requires-python = ">=3.12"
dependencies = [
    "architect-common",
    "architect-db",
    "architect-events",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "redis[hiredis]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_state_ledger"]

[tool.uv.sources]
architect-common = { workspace = true }
architect-db = { workspace = true }
architect-events = { workspace = true }
